reduce whitespace to fix print cut-off

--- a/resume.css
+++ b/resume.css
@@ -32,7 +32,7 @@ body {
 }
 
 hr {
-  margin: 1.2em 0;
+  margin: 1em 0;
   background: none;
   border: none;
   border-top: var(--border-main);
@@ -81,6 +81,7 @@ header h1 span:nth-child(2) {
 }
 
 header h2 {
+  padding-top: 0;
   margin: 0 0 0.6em;
   font-weight: 400;
   font-size: 1.2em;
